templates/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
